--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT = 4000
-MONGODB_URI = mongodb://localhost:27017/
+MONGODB_URI = mongodb+srv://sadhana903545_db_user:shangond%40123@cluster0.wmw7qxl.mongodb.net/
